Fix contact.html padding on mobile layout

--- a/src/styles/4-modules/_address.sass
+++ b/src/styles/4-modules/_address.sass
@@ -15,7 +15,6 @@
       margin: 0px auto
 
   #map
-    margin-top: 16px
     width: 100%
     vertical-align: bottom
 
