--- a/src/styles/4-modules/_contacts.sass
+++ b/src/styles/4-modules/_contacts.sass
@@ -1,8 +1,7 @@
 #contacts
   margin: 0px auto
-  // background-color: yellow
   max-width: 512px
-  padding: 0px 16px
+  padding: 16px 16px
 
   .contact-info
 
